[package]
name = "ply-rs-async-stub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
thiserror = "*"
tokio = { version = "1.0", features = ["sync"] }
tokio-stream = { version = "0.1.10"}
futures-util = "*"



[dev-dependencies]
anyhow = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
